added padding to aside bar

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <img class="Logo" src="./images/IMG_0368 (1).jpg" alt="Logo">
       <nav>
         <ul class="nav_links">
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="#div-2">About Me</a></li>
+          <li><a href="#Card">Work</a></li>
+          <li><a href="#Bottom-flex">Resume</a></li>
         </ul>
       </nav>
-      <a class="cta" href="#"><button>Contact Me</button></a>  
+      <a class="cta" href="#footer"><button>Contact Me</button></a>  
     </header>
 
     <main>
@@ -34,19 +34,19 @@
         <div class="div-2"> <em>My name is Tyler Webster, I am 21 years old with a hunger for learning new information that can help me to skyrocket levels when it comes to full-stack web developement. I am also looking for new connections that will allow me to display these skills to the world !</em></div>
        <section class="container">
         <div class="card">
-          <div class="card-image car-1"></div>
+          <div class="card-image car-1" ></div>
         <span>Font-end</span>
         <p>Projects with front end use only includes (HTML, & CSS)</p>
         <a href="">Read More!</a>
         </div>
         <div class="card">
-          <div class="card-image car-2"></div>
+          <div class="card-image car-2" id="Card" ></div>
         <span>Back-end</span>
         <p> Projects with Front-end & Back-end use includes (HTML, CSS, & Javascript)</p>
         <a href="">Read More!</a>
         </div>
        </section>
-       <section class="Bottom-flex"></section>
+       <section class="Bottom-flex" id="Bottom-flex"></section>
        <div class="card-3">
         <div class="card-image car-3"> </div>
         <h4>Personal Skills</h4>
