still need to fix media queries

--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
+<html lang="en-us">
 <html>
   <head>
     <title>Tyler</title>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
         </div>
     <header>
-      <img class="Logo" src="./images/IMG_0368 (1).jpg" alt="Logo">
+      <img class="Logo" src="./images/IMG_0368 (1).jpg" alt="website Logo">
       <nav>
         <ul class="nav_links">
-          <li><a href="#div-2">About Me</a></li>
+          <li><a href="#div-1">About Me</a></li>
           <li><a href="#Card">Work</a></li>
           <li><a href="#Bottom-flex">Resume</a></li>
         </ul>
       </nav>
-      <a class="cta" href="#footer"><button>Contact Me</button></a>  
+      <a href="#footer"><button>Contact Me</button></a>  
     </header>
 
     <main>
@@ -30,12 +31,12 @@
       <section>
   
        <section class="section-main">
-        <div class="div-1"> <img class="portrait" src="./images/Tyler.jpg"></div>
-        <div class="div-2"> <em>My name is Tyler Webster, I am 21 years old with a hunger for learning new information that can help me to skyrocket levels when it comes to full-stack web developement. I am also looking for new connections that will allow me to display these skills to the world !</em></div>
+        <div class="div-1"> <img class="portrait" src="./images/Tyler.jpg" alt="portarit of myself"></div>
+        <div class="div-2" id="div-1"> <em>My name is Tyler Webster, I am 21 years old with a hunger for learning new information that can help me to skyrocket levels when it comes to full-stack web developement. I am also looking for new connections that will allow me to display these skills to the world !</em></div>
        <section class="container">
         <div class="card">
-          <div class="card-image car-1" ></div>
-        <span>Font-end</span>
+          <div class="card-image car-1"></div>
+        <span>Front-end</span>
         <p>Projects with front end use only includes (HTML, & CSS)</p>
         <a href="">Read More!</a>
         </div>
@@ -59,10 +60,10 @@
     </main>
 
     <footer>
-      <h3>
-       Contact Me --> (240)978-2695 --> Webstertyler81@yahoo.com --> GitGub with hidden link --> Instagram with hidden link
-       
-      </h3>
+      <section id="footer"></section>
+      <h3>phone number - (240)978-2695</h3>
+      <h3>Email - Webstertyler81@yahoo.com </h3>
+     <h3>GitGub - https://github.com/Tyythedeveloper33 </h3>
     </footer>
   </body>
 </html>
